# osidb

./: .bandit  .coderabbit.yaml  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  conftest.py  convert_cwe.py  devel-requirements.in  devel-requirements.txt  docker-compose.public-images.yml  docker-compose.rh-images.yml  docker-compose.test.worktree.yml  docker-compose.test.yml  docker-compose.worktree.yml  docker-compose.yml  gunicorn_config.py  openapi.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  sonar-project.properties  test.Dockerfile  tox.ini
.claude/rules/: testing.md
.cursor/rules/: testing.mdc
.github/workflows/: bindings_integration.yml  lint.yml  meta.yml  pulls.yml  sonar.yml  test.yml
apps/ace/: README.md  apps.py  constants.py  osv_ranges.py  signals.py  tasks.py  version.py
apps/bbsync/: README.md  apps.py  cc.py  constants.py  exceptions.py  mixins.py  models.py  query.py  save.py  srtnotes-schema.json  srtnotes.py
apps/exploits/: README.md  api.py  apps.py  constants.py  (+6 more)
collectors/: cmd.py  constants.py  utils.py
config/: __init__.py  celery.py  settings.py  settings_ci.py  settings_deployed.py  settings_local.py  settings_prod.py  settings_shell.py  settings_stage.py  settings_uat.py  urls.py  wsgi.py
docs/: CHANGELOG.md  DEVELOP.md  OPERATIONS.md  TUTORIAL.md
krb5_auth/: README.md  auth.py  backend.py  views.py
mk/: checks.mk  db_backup.mk  defaults.mk  localdev.mk  setup.mk  testrunner.mk  tox.mk  worktree.mk
osidb/: README.md  __init__.py  acls.py  admin.py  api_views.py  apps.py  auth.py  cc.py  constants.py  core.py  datetime_utils.py  djangoql.py  exception_handlers.py  exceptions.py  filters.py  forms.py  helpers.py  hooks.py  integrations.py  locks.py  middleware.py  mixins.py  models.py  pagination.py  query_sets.py  renderers.py  routers.py  serializer.py  serializers_v1_optimized.py  signals.py  sync_manager.py  tasks.py  throttles.py  urls.py  validators.py  views.py
perf/: README.md  main.py
regulatory_reporting/: apps.py  constants.py  filters.py  middleware.py  services.py  signals.py  tasks.py  urls.py  views.py
scripts/: archive_data_dump.sh  backup_pg.sh  generate-worktree-ports.sh  install-certs.sh  lint.sh  migrations-check.sh  osidb-pre-push.sh  restore_pg.sh  run-celery-beat-standalone.sh  run-celery-beat.sh  run-celery-standalone.sh  run-celery.sh  run-flower.sh  run-service.sh  schema-check.sh  secrets-hook.sh  setup-osidb-data-public-image.sh  setup-osidb-data.sh  setup-osidb-service.sh  update_release.sh
(+1006 files in other folders)
