[project]
name = "osidb"
version = "5.5.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "backoff>=1.11.1",
    "celery-redbeat>=2.1.1",
    "celery[gevent]>=5.5.2",
    "cvss>=3.0",
    "django>=5.2.10,<6.0",
    "django-auth-ldap>=3.0.0",
    "django-contrib-postgres>=0.0.1",
    "django-cors-headers>=4.0.0",
    "django-db>=0.0.7",
    "django-deprecate-fields>=0.1.1",
    "django-extensions>=3.1.5",
    "django-filter>=23.4",
    "django-kaminarimon>=0.2.1",
    "django-model-utils>=5.0.0",
    "django-pghistory>=3.9.1,<4.0",
    "django-polymorphic>=4.1.0",
    "django-postgres-extra>=2.0.3",
    "djangoql>=0.18.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-csv>=3.0.2",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework-xml>=2.0.0",
    "drf-spectacular>=0.27.2",
    "flower>=2.0.1",
    "gunicorn[gevent,setproctitle]>=23.0.0",
    "hvac>=2.3.0",
    "inflection>=0.5.1",
    "jira>=3.8.0",
    "jsonschema>=4.2.1",
    "kerberos>=1.3.1",
    "markdown>=3.3.6",
    "nvdlib>=0.7.6",
    "packageurl-python>=0.16.0",
    "psycogreen>=1.0.2",
    "psycopg2>=2.9.2",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.4.0",
    "python-bugzilla>=3.3.0",
    "python-ldap>=3.4.5",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=4.5.4",
    "requests>=2.32.4",
    "requests-cache>=0.9.1",
    "requests-gssapi>=1.2.3",
    "rhubarb>=0.2.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.4.0",
    "django-extensions>=3.1.5",
    "django-stubs>=1.14.0",
    "djangorestframework-stubs>=1.8.0",
    "factory-boy>=3.2.1",
    "freezegun>=1.1.0",
    "k5test>=0.10.1",
    "lxml>=4.9.3",
    "mypy>=0.991",
    "openshift>=0.12.1",
    "packageurl-python>=0.16.0",
    "pre-commit>=2.16.0",
    "pytest>=7.4.4",
    "pytest-cov>=6.3.0",
    "pytest-django>=4.9.0",
    "pytest-recording>=0.13.2",
    "pytest-spec>=4.0.0",
    "pytest-sugar>=0.9.6",
    "pytest-xdist>=3.5.0",
    "python-dotenv>=1.1.0",
    "tox>=4.28.1",
    "tox-uv>=1.26.2",
    "vcrpy>=4.2.1",
]

[tool.ruff]
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
# Default enable Pyflakes (`F`) and some pycodestyle (`E`) codes.
# See documentation: https://docs.astral.sh/ruff/configuration/

extend-select = ["I", "S", "W", "DJ"]

# Some `S` rules are ignored based on original .bandit configuration.
# E203 (whitespace-before-punctuation) and E501 (line-too-long)
# are ignored for the formatter to handle.

ignore = ["S101", "S102", "S301", "E203", "E501", "DJ008"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*" = ["S"]
